--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -26,7 +26,19 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-executable frontexe
+-- executable             dev-frontexe
+--   if impl(ghcjs -any)
+--     buildable: False
+--   build-depends:       base > 4.6
+--                      , frontend
+--                      , jsaddle-warp
+--                      , reflex-dom-core
+
+--   main-is:             Dev.hs
+--   hs-source-dirs:      exe
+--   default-language:    Haskell2010
+
+executable             frontexe
   build-depends:       base > 4.6
                      , frontend
                      , reflex-dom
