--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -19,30 +19,35 @@ library
   exposed-modules:     FrontEnd
   -- other-modules:
   -- other-extensions:
-  build-depends:       base > 4.6 
+  build-depends:       base >= 4.9 && < 5
                      , reflex
                      , reflex-dom
+                     , jsaddle
+                     , lens
+                     , text
 
   hs-source-dirs:      src
   default-language:    Haskell2010
 
--- executable             dev-frontexe
---   if impl(ghcjs -any)
---     buildable: False
---   build-depends:       base > 4.6
---                      , frontend
---                      , jsaddle-warp
---                      , reflex-dom-core
+executable             frontexe-dev
+  if impl(ghcjs -any)
+    buildable: False
+  build-depends:       base >= 4.9 && < 5
+                     , frontend
+                     , jsaddle-warp
+                     , reflex-dom-core
 
---   main-is:             Dev.hs
---   hs-source-dirs:      exe
---   default-language:    Haskell2010
+  main-is:             Dev.hs
+
+  hs-source-dirs:      exe
+  default-language:    Haskell2010
 
 executable             frontexe
-  build-depends:       base > 4.6
+  build-depends:       base >= 4.9 && < 5
                      , frontend
                      , reflex-dom
-
+  
   main-is:             Main.hs
+
   hs-source-dirs:      exe
   default-language:    Haskell2010
